--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -124,7 +124,7 @@ fade-out-step = 0.03;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.8;
+inactive-opacity = 0.90;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -135,14 +135,14 @@ frame-opacity = 0.7;
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-# active-opacity = 1.0
+active-opacity = 1.0;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
+#focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -152,7 +152,9 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Note we don't make any guarantee about possible conflicts with other
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
-#    opacity-rule = [ "80:class_g = 'URxvt'" ];
+opacity-rule = [ 
+    "90:class_g = 'Alacritty'" 
+];
 #
 # opacity-rule = []
 
