--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -124,7 +124,7 @@ fade-out-step = 0.03;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-#inactive-opacity = 0.90;
+inactive-opacity = 0.90;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -135,7 +135,7 @@ fade-out-step = 0.03;
 #inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-#active-opacity = 1.0;
+active-opacity = 1.0;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
@@ -152,9 +152,9 @@ fade-out-step = 0.03;
 # Note we don't make any guarantee about possible conflicts with other
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
-#opacity-rule = [ 
-#    "90:class_g = 'Alacritty'" 
-#];
+opacity-rule = [ 
+    "90:class_g = 'Alacritty'" 
+];
 #
 # opacity-rule = []
 
