--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -4,7 +4,7 @@ corner-radius = 30.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'awesome'",
-  "class_g = 'URxvt'",
+  "class_g = 'Rofi'",
   "class_g = 'XTerm'",
   "class_g = 'kitty'",
   #"class_g = 'Alacritty'",
