--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,6 +1,6 @@
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 30.0;
+corner-radius = 20.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'awesome'",
@@ -14,10 +14,10 @@ rounded-corners-exclude = [
   #"class_g = 'firefox'",
   "class_g = 'Thunderbird'"
 ];
-round-borders = 1;
-round-borders-exclude = [
+#round-borders = 1;
+#round-borders-exclude = [
   #"class_g = 'TelegramDesktop'",
-];
+#];
 
 #################################
 #             Shadows           #
@@ -153,7 +153,8 @@ active-opacity = 1.0;
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
 opacity-rule = [ 
-    "90:class_g = 'Alacritty'" 
+    "90:class_g = 'Alacritty'",
+    "100:class_g = 'firefox'"
 ];
 #
 # opacity-rule = []
@@ -195,14 +196,14 @@ opacity-rule = [
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
 # blur-kern = ""
-blur-kern = "3x3box";
+#blur-kern = "3x3box";
 
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
 blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
+#  "window_type = 'dock'",
+#  "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -217,6 +218,7 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 # backend = "glx"
+experimental-backends = true;
 backend = "xrender";
 
 # Enable/disable VSync.
