--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -14,10 +14,10 @@ rounded-corners-exclude = [
   #"class_g = 'firefox'",
   "class_g = 'Thunderbird'"
 ];
-#round-borders = 1;
-#round-borders-exclude = [
-  #"class_g = 'TelegramDesktop'",
-#];
+round-borders = 5;
+round-borders-exclude = [
+  "class_g = 'firefox && argb'",
+];
 
 #################################
 #             Shadows           #
